--- a/client/main.css
+++ b/client/main.css
@@ -1079,6 +1079,10 @@ video {
   background-color: #465866;
 }
 
+.bg-arcops-blue {
+  background-color: #0C6BDC;
+}
+
 .hover\:bg-transparent:hover {
   background-color: transparent;
 }
@@ -1467,6 +1471,10 @@ video {
   background-color: #465866;
 }
 
+.hover\:bg-arcops-blue:hover {
+  background-color: #0C6BDC;
+}
+
 .focus\:bg-transparent:focus {
   background-color: transparent;
 }
@@ -1853,6 +1861,10 @@ video {
 
 .focus\:bg-font-gray:focus {
   background-color: #465866;
+}
+
+.focus\:bg-arcops-blue:focus {
+  background-color: #0C6BDC;
 }
 
 .bg-bottom {
@@ -2323,6 +2335,10 @@ video {
   border-color: #465866;
 }
 
+.border-arcops-blue {
+  border-color: #0C6BDC;
+}
+
 .hover\:border-transparent:hover {
   border-color: transparent;
 }
@@ -2711,6 +2727,10 @@ video {
   border-color: #465866;
 }
 
+.hover\:border-arcops-blue:hover {
+  border-color: #0C6BDC;
+}
+
 .focus\:border-transparent:focus {
   border-color: transparent;
 }
@@ -3097,6 +3117,10 @@ video {
 
 .focus\:border-font-gray:focus {
   border-color: #465866;
+}
+
+.focus\:border-arcops-blue:focus {
+  border-color: #0C6BDC;
 }
 
 .rounded-none {
@@ -7909,6 +7933,26 @@ video {
   color: #465866;
 }
 
+.placeholder-arcops-blue::-webkit-input-placeholder {
+  color: #0C6BDC;
+}
+
+.placeholder-arcops-blue::-moz-placeholder {
+  color: #0C6BDC;
+}
+
+.placeholder-arcops-blue:-ms-input-placeholder {
+  color: #0C6BDC;
+}
+
+.placeholder-arcops-blue::-ms-input-placeholder {
+  color: #0C6BDC;
+}
+
+.placeholder-arcops-blue::placeholder {
+  color: #0C6BDC;
+}
+
 .focus\:placeholder-transparent:focus::-webkit-input-placeholder {
   color: transparent;
 }
@@ -9849,6 +9893,26 @@ video {
   color: #465866;
 }
 
+.focus\:placeholder-arcops-blue:focus::-webkit-input-placeholder {
+  color: #0C6BDC;
+}
+
+.focus\:placeholder-arcops-blue:focus::-moz-placeholder {
+  color: #0C6BDC;
+}
+
+.focus\:placeholder-arcops-blue:focus:-ms-input-placeholder {
+  color: #0C6BDC;
+}
+
+.focus\:placeholder-arcops-blue:focus::-ms-input-placeholder {
+  color: #0C6BDC;
+}
+
+.focus\:placeholder-arcops-blue:focus::placeholder {
+  color: #0C6BDC;
+}
+
 .pointer-events-none {
   pointer-events: none;
 }
@@ -10476,6 +10540,10 @@ video {
   color: #465866;
 }
 
+.text-arcops-blue {
+  color: #0C6BDC;
+}
+
 .hover\:text-transparent:hover {
   color: transparent;
 }
@@ -10864,6 +10932,10 @@ video {
   color: #465866;
 }
 
+.hover\:text-arcops-blue:hover {
+  color: #0C6BDC;
+}
+
 .focus\:text-transparent:focus {
   color: transparent;
 }
@@ -11250,6 +11322,10 @@ video {
 
 .focus\:text-font-gray:focus {
   color: #465866;
+}
+
+.focus\:text-arcops-blue:focus {
+  color: #0C6BDC;
 }
 
 .text-xs {
@@ -12158,6 +12234,10 @@ video {
     background-color: #465866;
   }
 
+  .sm\:bg-arcops-blue {
+    background-color: #0C6BDC;
+  }
+
   .sm\:hover\:bg-transparent:hover {
     background-color: transparent;
   }
@@ -12546,6 +12626,10 @@ video {
     background-color: #465866;
   }
 
+  .sm\:hover\:bg-arcops-blue:hover {
+    background-color: #0C6BDC;
+  }
+
   .sm\:focus\:bg-transparent:focus {
     background-color: transparent;
   }
@@ -12932,6 +13016,10 @@ video {
 
   .sm\:focus\:bg-font-gray:focus {
     background-color: #465866;
+  }
+
+  .sm\:focus\:bg-arcops-blue:focus {
+    background-color: #0C6BDC;
   }
 
   .sm\:bg-bottom {
@@ -13402,6 +13490,10 @@ video {
     border-color: #465866;
   }
 
+  .sm\:border-arcops-blue {
+    border-color: #0C6BDC;
+  }
+
   .sm\:hover\:border-transparent:hover {
     border-color: transparent;
   }
@@ -13790,6 +13882,10 @@ video {
     border-color: #465866;
   }
 
+  .sm\:hover\:border-arcops-blue:hover {
+    border-color: #0C6BDC;
+  }
+
   .sm\:focus\:border-transparent:focus {
     border-color: transparent;
   }
@@ -14176,6 +14272,10 @@ video {
 
   .sm\:focus\:border-font-gray:focus {
     border-color: #465866;
+  }
+
+  .sm\:focus\:border-arcops-blue:focus {
+    border-color: #0C6BDC;
   }
 
   .sm\:rounded-none {
@@ -18988,6 +19088,26 @@ video {
     color: #465866;
   }
 
+  .sm\:placeholder-arcops-blue::-webkit-input-placeholder {
+    color: #0C6BDC;
+  }
+
+  .sm\:placeholder-arcops-blue::-moz-placeholder {
+    color: #0C6BDC;
+  }
+
+  .sm\:placeholder-arcops-blue:-ms-input-placeholder {
+    color: #0C6BDC;
+  }
+
+  .sm\:placeholder-arcops-blue::-ms-input-placeholder {
+    color: #0C6BDC;
+  }
+
+  .sm\:placeholder-arcops-blue::placeholder {
+    color: #0C6BDC;
+  }
+
   .sm\:focus\:placeholder-transparent:focus::-webkit-input-placeholder {
     color: transparent;
   }
@@ -20928,6 +21048,26 @@ video {
     color: #465866;
   }
 
+  .sm\:focus\:placeholder-arcops-blue:focus::-webkit-input-placeholder {
+    color: #0C6BDC;
+  }
+
+  .sm\:focus\:placeholder-arcops-blue:focus::-moz-placeholder {
+    color: #0C6BDC;
+  }
+
+  .sm\:focus\:placeholder-arcops-blue:focus:-ms-input-placeholder {
+    color: #0C6BDC;
+  }
+
+  .sm\:focus\:placeholder-arcops-blue:focus::-ms-input-placeholder {
+    color: #0C6BDC;
+  }
+
+  .sm\:focus\:placeholder-arcops-blue:focus::placeholder {
+    color: #0C6BDC;
+  }
+
   .sm\:pointer-events-none {
     pointer-events: none;
   }
@@ -21555,6 +21695,10 @@ video {
     color: #465866;
   }
 
+  .sm\:text-arcops-blue {
+    color: #0C6BDC;
+  }
+
   .sm\:hover\:text-transparent:hover {
     color: transparent;
   }
@@ -21943,6 +22087,10 @@ video {
     color: #465866;
   }
 
+  .sm\:hover\:text-arcops-blue:hover {
+    color: #0C6BDC;
+  }
+
   .sm\:focus\:text-transparent:focus {
     color: transparent;
   }
@@ -22329,6 +22477,10 @@ video {
 
   .sm\:focus\:text-font-gray:focus {
     color: #465866;
+  }
+
+  .sm\:focus\:text-arcops-blue:focus {
+    color: #0C6BDC;
   }
 
   .sm\:text-xs {
@@ -23238,6 +23390,10 @@ video {
     background-color: #465866;
   }
 
+  .md\:bg-arcops-blue {
+    background-color: #0C6BDC;
+  }
+
   .md\:hover\:bg-transparent:hover {
     background-color: transparent;
   }
@@ -23626,6 +23782,10 @@ video {
     background-color: #465866;
   }
 
+  .md\:hover\:bg-arcops-blue:hover {
+    background-color: #0C6BDC;
+  }
+
   .md\:focus\:bg-transparent:focus {
     background-color: transparent;
   }
@@ -24012,6 +24172,10 @@ video {
 
   .md\:focus\:bg-font-gray:focus {
     background-color: #465866;
+  }
+
+  .md\:focus\:bg-arcops-blue:focus {
+    background-color: #0C6BDC;
   }
 
   .md\:bg-bottom {
@@ -24482,6 +24646,10 @@ video {
     border-color: #465866;
   }
 
+  .md\:border-arcops-blue {
+    border-color: #0C6BDC;
+  }
+
   .md\:hover\:border-transparent:hover {
     border-color: transparent;
   }
@@ -24870,6 +25038,10 @@ video {
     border-color: #465866;
   }
 
+  .md\:hover\:border-arcops-blue:hover {
+    border-color: #0C6BDC;
+  }
+
   .md\:focus\:border-transparent:focus {
     border-color: transparent;
   }
@@ -25256,6 +25428,10 @@ video {
 
   .md\:focus\:border-font-gray:focus {
     border-color: #465866;
+  }
+
+  .md\:focus\:border-arcops-blue:focus {
+    border-color: #0C6BDC;
   }
 
   .md\:rounded-none {
@@ -30068,6 +30244,26 @@ video {
     color: #465866;
   }
 
+  .md\:placeholder-arcops-blue::-webkit-input-placeholder {
+    color: #0C6BDC;
+  }
+
+  .md\:placeholder-arcops-blue::-moz-placeholder {
+    color: #0C6BDC;
+  }
+
+  .md\:placeholder-arcops-blue:-ms-input-placeholder {
+    color: #0C6BDC;
+  }
+
+  .md\:placeholder-arcops-blue::-ms-input-placeholder {
+    color: #0C6BDC;
+  }
+
+  .md\:placeholder-arcops-blue::placeholder {
+    color: #0C6BDC;
+  }
+
   .md\:focus\:placeholder-transparent:focus::-webkit-input-placeholder {
     color: transparent;
   }
@@ -32008,6 +32204,26 @@ video {
     color: #465866;
   }
 
+  .md\:focus\:placeholder-arcops-blue:focus::-webkit-input-placeholder {
+    color: #0C6BDC;
+  }
+
+  .md\:focus\:placeholder-arcops-blue:focus::-moz-placeholder {
+    color: #0C6BDC;
+  }
+
+  .md\:focus\:placeholder-arcops-blue:focus:-ms-input-placeholder {
+    color: #0C6BDC;
+  }
+
+  .md\:focus\:placeholder-arcops-blue:focus::-ms-input-placeholder {
+    color: #0C6BDC;
+  }
+
+  .md\:focus\:placeholder-arcops-blue:focus::placeholder {
+    color: #0C6BDC;
+  }
+
   .md\:pointer-events-none {
     pointer-events: none;
   }
@@ -32635,6 +32851,10 @@ video {
     color: #465866;
   }
 
+  .md\:text-arcops-blue {
+    color: #0C6BDC;
+  }
+
   .md\:hover\:text-transparent:hover {
     color: transparent;
   }
@@ -33023,6 +33243,10 @@ video {
     color: #465866;
   }
 
+  .md\:hover\:text-arcops-blue:hover {
+    color: #0C6BDC;
+  }
+
   .md\:focus\:text-transparent:focus {
     color: transparent;
   }
@@ -33409,6 +33633,10 @@ video {
 
   .md\:focus\:text-font-gray:focus {
     color: #465866;
+  }
+
+  .md\:focus\:text-arcops-blue:focus {
+    color: #0C6BDC;
   }
 
   .md\:text-xs {
@@ -34318,6 +34546,10 @@ video {
     background-color: #465866;
   }
 
+  .lg\:bg-arcops-blue {
+    background-color: #0C6BDC;
+  }
+
   .lg\:hover\:bg-transparent:hover {
     background-color: transparent;
   }
@@ -34706,6 +34938,10 @@ video {
     background-color: #465866;
   }
 
+  .lg\:hover\:bg-arcops-blue:hover {
+    background-color: #0C6BDC;
+  }
+
   .lg\:focus\:bg-transparent:focus {
     background-color: transparent;
   }
@@ -35092,6 +35328,10 @@ video {
 
   .lg\:focus\:bg-font-gray:focus {
     background-color: #465866;
+  }
+
+  .lg\:focus\:bg-arcops-blue:focus {
+    background-color: #0C6BDC;
   }
 
   .lg\:bg-bottom {
@@ -35562,6 +35802,10 @@ video {
     border-color: #465866;
   }
 
+  .lg\:border-arcops-blue {
+    border-color: #0C6BDC;
+  }
+
   .lg\:hover\:border-transparent:hover {
     border-color: transparent;
   }
@@ -35950,6 +36194,10 @@ video {
     border-color: #465866;
   }
 
+  .lg\:hover\:border-arcops-blue:hover {
+    border-color: #0C6BDC;
+  }
+
   .lg\:focus\:border-transparent:focus {
     border-color: transparent;
   }
@@ -36336,6 +36584,10 @@ video {
 
   .lg\:focus\:border-font-gray:focus {
     border-color: #465866;
+  }
+
+  .lg\:focus\:border-arcops-blue:focus {
+    border-color: #0C6BDC;
   }
 
   .lg\:rounded-none {
@@ -41148,6 +41400,26 @@ video {
     color: #465866;
   }
 
+  .lg\:placeholder-arcops-blue::-webkit-input-placeholder {
+    color: #0C6BDC;
+  }
+
+  .lg\:placeholder-arcops-blue::-moz-placeholder {
+    color: #0C6BDC;
+  }
+
+  .lg\:placeholder-arcops-blue:-ms-input-placeholder {
+    color: #0C6BDC;
+  }
+
+  .lg\:placeholder-arcops-blue::-ms-input-placeholder {
+    color: #0C6BDC;
+  }
+
+  .lg\:placeholder-arcops-blue::placeholder {
+    color: #0C6BDC;
+  }
+
   .lg\:focus\:placeholder-transparent:focus::-webkit-input-placeholder {
     color: transparent;
   }
@@ -43088,6 +43360,26 @@ video {
     color: #465866;
   }
 
+  .lg\:focus\:placeholder-arcops-blue:focus::-webkit-input-placeholder {
+    color: #0C6BDC;
+  }
+
+  .lg\:focus\:placeholder-arcops-blue:focus::-moz-placeholder {
+    color: #0C6BDC;
+  }
+
+  .lg\:focus\:placeholder-arcops-blue:focus:-ms-input-placeholder {
+    color: #0C6BDC;
+  }
+
+  .lg\:focus\:placeholder-arcops-blue:focus::-ms-input-placeholder {
+    color: #0C6BDC;
+  }
+
+  .lg\:focus\:placeholder-arcops-blue:focus::placeholder {
+    color: #0C6BDC;
+  }
+
   .lg\:pointer-events-none {
     pointer-events: none;
   }
@@ -43715,6 +44007,10 @@ video {
     color: #465866;
   }
 
+  .lg\:text-arcops-blue {
+    color: #0C6BDC;
+  }
+
   .lg\:hover\:text-transparent:hover {
     color: transparent;
   }
@@ -44103,6 +44399,10 @@ video {
     color: #465866;
   }
 
+  .lg\:hover\:text-arcops-blue:hover {
+    color: #0C6BDC;
+  }
+
   .lg\:focus\:text-transparent:focus {
     color: transparent;
   }
@@ -44489,6 +44789,10 @@ video {
 
   .lg\:focus\:text-font-gray:focus {
     color: #465866;
+  }
+
+  .lg\:focus\:text-arcops-blue:focus {
+    color: #0C6BDC;
   }
 
   .lg\:text-xs {
@@ -45398,6 +45702,10 @@ video {
     background-color: #465866;
   }
 
+  .xl\:bg-arcops-blue {
+    background-color: #0C6BDC;
+  }
+
   .xl\:hover\:bg-transparent:hover {
     background-color: transparent;
   }
@@ -45786,6 +46094,10 @@ video {
     background-color: #465866;
   }
 
+  .xl\:hover\:bg-arcops-blue:hover {
+    background-color: #0C6BDC;
+  }
+
   .xl\:focus\:bg-transparent:focus {
     background-color: transparent;
   }
@@ -46172,6 +46484,10 @@ video {
 
   .xl\:focus\:bg-font-gray:focus {
     background-color: #465866;
+  }
+
+  .xl\:focus\:bg-arcops-blue:focus {
+    background-color: #0C6BDC;
   }
 
   .xl\:bg-bottom {
@@ -46642,6 +46958,10 @@ video {
     border-color: #465866;
   }
 
+  .xl\:border-arcops-blue {
+    border-color: #0C6BDC;
+  }
+
   .xl\:hover\:border-transparent:hover {
     border-color: transparent;
   }
@@ -47030,6 +47350,10 @@ video {
     border-color: #465866;
   }
 
+  .xl\:hover\:border-arcops-blue:hover {
+    border-color: #0C6BDC;
+  }
+
   .xl\:focus\:border-transparent:focus {
     border-color: transparent;
   }
@@ -47416,6 +47740,10 @@ video {
 
   .xl\:focus\:border-font-gray:focus {
     border-color: #465866;
+  }
+
+  .xl\:focus\:border-arcops-blue:focus {
+    border-color: #0C6BDC;
   }
 
   .xl\:rounded-none {
@@ -52228,6 +52556,26 @@ video {
     color: #465866;
   }
 
+  .xl\:placeholder-arcops-blue::-webkit-input-placeholder {
+    color: #0C6BDC;
+  }
+
+  .xl\:placeholder-arcops-blue::-moz-placeholder {
+    color: #0C6BDC;
+  }
+
+  .xl\:placeholder-arcops-blue:-ms-input-placeholder {
+    color: #0C6BDC;
+  }
+
+  .xl\:placeholder-arcops-blue::-ms-input-placeholder {
+    color: #0C6BDC;
+  }
+
+  .xl\:placeholder-arcops-blue::placeholder {
+    color: #0C6BDC;
+  }
+
   .xl\:focus\:placeholder-transparent:focus::-webkit-input-placeholder {
     color: transparent;
   }
@@ -54168,6 +54516,26 @@ video {
     color: #465866;
   }
 
+  .xl\:focus\:placeholder-arcops-blue:focus::-webkit-input-placeholder {
+    color: #0C6BDC;
+  }
+
+  .xl\:focus\:placeholder-arcops-blue:focus::-moz-placeholder {
+    color: #0C6BDC;
+  }
+
+  .xl\:focus\:placeholder-arcops-blue:focus:-ms-input-placeholder {
+    color: #0C6BDC;
+  }
+
+  .xl\:focus\:placeholder-arcops-blue:focus::-ms-input-placeholder {
+    color: #0C6BDC;
+  }
+
+  .xl\:focus\:placeholder-arcops-blue:focus::placeholder {
+    color: #0C6BDC;
+  }
+
   .xl\:pointer-events-none {
     pointer-events: none;
   }
@@ -54795,6 +55163,10 @@ video {
     color: #465866;
   }
 
+  .xl\:text-arcops-blue {
+    color: #0C6BDC;
+  }
+
   .xl\:hover\:text-transparent:hover {
     color: transparent;
   }
@@ -55183,6 +55555,10 @@ video {
     color: #465866;
   }
 
+  .xl\:hover\:text-arcops-blue:hover {
+    color: #0C6BDC;
+  }
+
   .xl\:focus\:text-transparent:focus {
     color: transparent;
   }
@@ -55569,6 +55945,10 @@ video {
 
   .xl\:focus\:text-font-gray:focus {
     color: #465866;
+  }
+
+  .xl\:focus\:text-arcops-blue:focus {
+    color: #0C6BDC;
   }
 
   .xl\:text-xs {
